feat: Add genres endpoint
